fix navbar visibility

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ a {
   justify-content: space-around;
   align-items: center;
   background-color: black;
+  z-index: 1000;
 }
 
 .placeholder {
